--- a/.babelrc
+++ b/.babelrc
@@ -9,10 +9,19 @@
     "stage-2"
   ],
   "plugins": [
-    "transform-vue-jsx", "transform-runtime",
+    "transform-vue-jsx", 
+    "transform-runtime",
     ["import", {
       "libraryName": "vant",
       "libraryDirectory": "es",
       "style": true
-    }]]
+    }]
+  ]
+    // [
+    //   "import",
+    //   {
+    //     "libraryName": "element-ui",
+    //     "styleLibraryName": "theme-chalk"
+    //   }
+    // ]
 }
