--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.13.2",
     "qs": "^6.9.4",
     "vant": "^2.10.7",
     "vue": "^2.5.2",
