--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qs": "^6.9.4",
     "vant": "^2.10.7",
     "vue": "^2.5.2",
+    "vue-drag-verify2": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuescroll": "4.9.0-beta.17",
     "vuex": "^3.0.1",
