--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.13.2",
+    "mobile-detect": "^1.4.4",
     "qs": "^6.9.4",
     "vant": "^2.10.7",
     "vue": "^2.5.2",
