--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "to-park-invitation",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "HeWei <961268918@qq.com>",
+  "description": "TO PARK INVITATION",
+  "author": "MaggieZhang9494 <523935012@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
